[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/popup/Winner.gd" type="Script" id=1]
[ext_resource path="res://art/Winner/background_winner.png" type="Texture" id=2]
[ext_resource path="res://art/Winner/Winner_Popup.png" type="Texture" id=3]
[ext_resource path="res://font/CarterOne.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://art/MainMenu/home.png" type="Texture" id=5]
[ext_resource path="res://art/MainMenu/Replay.png" type="Texture" id=6]
[ext_resource path="res://art/sounds/YouLoseSound.wav" type="AudioStream" id=7]
[ext_resource path="res://art/sounds/bgSound1.ogg" type="AudioStream" id=8]
[ext_resource path="res://art/sounds/click.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Winner" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -374.633
margin_top = -667.0
margin_right = 375.367
margin_bottom = 667.0
texture = ExtResource( 2 )

[node name="CenterImage" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.541
margin_top = -209.541
margin_right = 151.459
margin_bottom = 158.459
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.600098
margin_top = -0.911377
margin_right = -0.600098
margin_bottom = -0.911377
color = Color( 0.00784314, 0.00784314, 0.00784314, 0.156863 )

[node name="Message" type="Label" parent="."]
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.9
anchor_bottom = 0.5
margin_top = -37.0
margin_right = -27.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 1 )
text = "You win."
align = 1
valign = 1

[node name="Msg2" type="Label" parent="."]
visible = false
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.9
anchor_bottom = 0.5
margin_top = 10.0
margin_right = -25.0
custom_fonts/font = SubResource( 2 )
text = "Try Hard Mode"
align = 1

[node name="Msg3" type="Label" parent="."]
visible = false
anchor_left = 0.189
anchor_top = 0.5
anchor_right = 0.821
anchor_bottom = 0.5
margin_left = 4.936
margin_top = 24.5
margin_right = -4.69601
margin_bottom = 91.5
custom_fonts/font = SubResource( 2 )
text = "Your opponet is ready for Replay."
align = 1
autowrap = true

[node name="btnHome" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 6.50003
margin_top = 125.5
margin_right = 143.5
margin_bottom = 172.5
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true

[node name="btnReplay" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.718
margin_top = 125.471
margin_right = 20.2824
margin_bottom = 172.471
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true

[node name="LoseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Normal"

[node name="BgSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "BackGround"

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Normal"

[node name="btnHome2" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.6596
margin_top = 125.024
margin_right = 75.3404
margin_bottom = 172.024
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true

[node name="lblHome2" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.6096
margin_top = 132.024
margin_right = 25.3904
margin_bottom = 159.024
custom_fonts/font = SubResource( 3 )
text = "Home"
align = 1
valign = 1

[connection signal="pressed" from="btnHome" to="." method="_on_btnHome_pressed"]
[connection signal="pressed" from="btnReplay" to="." method="_on_btnReplay_pressed"]
[connection signal="pressed" from="btnHome2" to="." method="_on_btnHome_pressed"]
